--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html-to-image/1.11.11/html-to-image.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fontfaceobserver/2.3.0/fontfaceobserver.standalone.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js?v=2"></script>
 
     <script>
         // توسيع/طي العناصر الفردية
